@@ -8,7 +8,11 @@ Block MODSEL  # Select model
      3    1   # NMSSM
      9    0   # call micrOmegas (default: 0 = no)
     13    1   # sparticle decays via NMSDECAY (default: 0)
+<<<<<<< HEAD
     12    4.49550209e+02   # parameter output scale
+=======
+    12    4.52517768e+02   # parameter output scale
+>>>>>>> 825a76e... Better error trapping after bail-out of main iteration
 Block SMINPUTS             # Standard Model inputs
      1    1.27918000e+02   # alpha_em^(-1)(MZ) SM MSbar
      2    1.16639000e-05   # G_Fermi
@@ -24,6 +28,7 @@ Block MINPAR               # SUSY breaking input parameters
      2    2.00000000e+02   # m12
      5   -3.00000000e+02   # A0
 Block EXTPAR               # scale of SUSY breaking BCs
+<<<<<<< HEAD
      0    2.72200990e+16   # MX scale
 # SOFTSUSY-specific non SLHA information:
 # MIXING=2 Desired accuracy=1.00000000e-04 Achieved accuracy=9.66360633e-05
@@ -198,3 +203,179 @@ Block smumix               # smuon mixing matrix
   1  2     9.99959901e-01   # F_{12}
   2  1     9.99959901e-01   # F_{21}
   2  2    -8.95522351e-03   # F_{22}
+=======
+     0    2.71398158e+16   # MX scale
+# SOFTSUSY-specific non SLHA information:
+# MIXING=2 Desired accuracy=1.00000000e-04 Achieved accuracy=9.27440759e-05
+# Z3 = 0, SoftHiggsOut = 0
+Block MASS                      # Mass spectrum
+# PDG code     mass             particle
+        24     8.03783401e+01   # MW
+        25     1.04208132e+02   # h0(1)
+        35     3.92150727e+02   # h0(2)
+        45     5.12983943e+02   # h0(3)
+        36     4.74904452e+02   # A0(1)
+        46     5.14215123e+02   # A0(2)
+        37     5.19228376e+02   # H+
+   1000021     5.19614467e+02   # ~g
+   1000022     7.72060784e+01   # ~neutralino(1)
+   1000023     1.43194836e+02   # ~neutralino(2)
+   1000024     1.43068552e+02   # ~chargino(1)
+   1000025     1.95137705e+02   # ~neutralino(3)
+   1000035    -3.25479899e+02   # ~neutralino(4)
+   1000037     3.43891745e+02   # ~chargino(2)
+   1000045     3.43184118e+02   # ~neutralino(5)
+   1000001     6.01624094e+02   # ~d_L
+   1000002     5.96571942e+02   # ~u_L
+   1000003     6.01621525e+02   # ~s_L
+   1000004     5.96569351e+02   # ~c_L
+   1000005     5.18253385e+02   # ~b_1
+   1000006     3.80204476e+02   # ~t_1
+   1000011     4.22932299e+02   # ~e_L
+   1000012     4.15130764e+02   # ~nue_L
+   1000013     4.22926003e+02   # ~mu_L
+   1000014     4.15123150e+02   # ~numu_L
+   1000015     4.00940751e+02   # ~stau_1
+   1000016     4.12828916e+02   # ~nu_tau_L
+   2000001     5.88872903e+02   # ~d_R
+   2000002     5.88268714e+02   # ~u_R
+   2000003     5.88870228e+02   # ~s_R
+   2000004     5.88266097e+02   # ~c_R
+   2000005     5.84802286e+02   # ~b_2
+   2000006     5.79470956e+02   # ~t_2
+   2000011     4.08717439e+02   # ~e_R
+   2000013     4.08700652e+02   # ~mu_R
+   2000015     4.23583860e+02   # ~stau_2
+Block NMHmix                # CP even Higgs mixing matrix
+  1  1     1.08119714e-01   # S_{1,1}
+  1  2     9.90925380e-01   # S_{1,2}
+  1  3    -7.98562339e-02   # S_{1,3}
+  2  1     1.13033231e-02   # S_{2,1}
+  2  2     7.90965826e-02   # S_{2,2}
+  2  3     9.96802872e-01   # S_{2,3}
+  3  1     9.94073620e-01   # S_{3,1}
+  3  2    -1.08676682e-01   # S_{3,2}
+  3  3    -2.64884989e-03   # S_{3,3}
+Block NMAmix                # CP odd Higgs mixing matrix
+  1  1     1.52769392e-01   # P_{1,1}
+  1  2     1.52769392e-02   # P_{1,2}
+  1  3     9.88143779e-01   # P_{1,3}
+  2  1     9.83239809e-01   # P_{2,1}
+  2  2     9.83239808e-02   # P_{2,2}
+  2  3    -1.53531339e-01   # P_{2,3}
+Block NMNmix                # neutralino mixing matrix
+  1  1     9.80516478e-01   # N_{1,1}
+  1  2    -7.46609374e-02   # N_{1,2}
+  1  3     1.69827736e-01   # N_{1,3}
+  1  4    -5.90048992e-02   # N_{1,4}
+  1  5     2.62705762e-02   # N_{1,5}
+  2  1     1.31909327e-01   # N_{2,1}
+  2  2     9.32637193e-01   # N_{2,2}
+  2  3    -2.83737535e-01   # N_{2,3}
+  2  4     1.54210919e-01   # N_{2,4}
+  2  5    -9.21943500e-02   # N_{2,5}
+  3  1    -2.07500183e-02   # N_{3,1}
+  3  2     1.08325370e-01   # N_{3,2}
+  3  3    -3.86519917e-03   # N_{3,3}
+  3  4    -5.10845486e-02   # N_{3,4}
+  3  5     9.92577695e-01   # N_{3,5}
+  4  1    -6.96115907e-02   # N_{4,1}
+  4  2     1.05126386e-01   # N_{4,2}
+  4  3     6.91131609e-01   # N_{4,3}
+  4  4     7.11157306e-01   # N_{4,4}
+  4  5     2.63638956e-02   # N_{4,5}
+  5  1    -1.26138929e-01   # N_{5,1}
+  5  2     3.19104476e-01   # N_{5,2}
+  5  3     6.42630306e-01   # N_{5,3}
+  5  4    -6.81456579e-01   # N_{5,4}
+  5  5    -7.00323044e-02   # N_{5,5}
+Block Umix                  # chargino U mixing matrix 
+  1  1     9.07128932e-01   # U_{1,1}
+  1  2    -4.20852826e-01   # U_{1,2}
+  2  1     4.20852826e-01   # U_{2,1}
+  2  2     9.07128932e-01   # U_{2,2}
+Block Vmix                  # chargino V mixing matrix 
+  1  1     9.74674205e-01   # V_{1,1}
+  1  2    -2.23629589e-01   # V_{1,2}
+  2  1     2.23629589e-01   # V_{2,1}
+  2  2     9.74674205e-01   # V_{2,2}
+Block stopmix               # stop mixing matrix
+  1  1     4.99160984e-01   # F_{11}
+  1  2     8.66509268e-01   # F_{12}
+  2  1     8.66509268e-01   # F_{21}
+  2  2    -4.99160984e-01   # F_{22}
+Block sbotmix               # sbottom mixing matrix
+  1  1     9.91942162e-01   # F_{11}
+  1  2     1.26691547e-01   # F_{12}
+  2  1    -1.26691547e-01   # F_{21}
+  2  2     9.91942162e-01   # F_{22}
+Block staumix               # stau mixing matrix
+  1  1     3.63801451e-01   # F_{11}
+  1  2     9.31476519e-01   # F_{12}
+  2  1     9.31476519e-01   # F_{21}
+  2  2    -3.63801451e-01   # F_{22}
+Block gauge Q= 4.52517768e+02  # SM gauge couplings
+     1     3.60568937e-01   # g'(Q)MSSM DRbar
+     2     6.46228511e-01   # g(Q)MSSM DRbar
+     3     1.10690047e+00   # g3(Q)MSSM DRbar
+Block yu Q= 4.52517768e+02  
+  3  3     8.54072863e-01   # Yt(Q)MSSM DRbar
+Block yd Q= 4.52517768e+02  
+  3  3     1.37761289e-01   # Yb(Q)MSSM DRbar
+Block ye Q= 4.52517768e+02  
+  3  3     1.00434774e-01   # Ytau(Q)MSSM DRbar
+Block hmix Q= 4.52517768e+02 # Higgs mixing parameters
+     1     2.11453769e+02    # mu(Q)MSSM DRbar
+     2     9.77230056e+00    # tan beta(Q)MSSM DRbar Feynman gauge
+     3     2.45036380e+02    # higgs vev(Q)MSSM DRbar Feynman gauge
+     4     3.56200777e+05    # mA^2(Q)MSSM DRbar
+Block msoft Q= 4.52517768e+02  # MSSM DRbar SUSY breaking parameters
+     1     8.09924776e+01      # M_1(Q)
+     2     1.53175824e+02      # M_2(Q)
+     3     4.75713180e+02      # M_3(Q)
+    21     1.63305827e+05      # mH1^2(Q)
+    22    -9.99870529e+04      # mH2^2(Q)
+    31     4.19918877e+02      # meL(Q)
+    32     4.19911359e+02      # mmuL(Q)
+    33     4.17691964e+02      # mtauL(Q)
+    34     4.05909988e+02      # meR(Q)
+    35     4.05894324e+02      # mmuR(Q)
+    36     4.01255329e+02      # mtauR(Q)
+    41     5.84299086e+02      # mqL1(Q)
+    42     5.84296420e+02      # mqL2(Q)
+    43     5.03402161e+02      # mqL3(Q)
+    44     5.74803148e+02      # muR(Q)
+    45     5.74800445e+02      # mcR(Q)
+    46     3.96460935e+02      # mtR(Q)
+    47     5.73756129e+02      # mdR(Q)
+    48     5.73753357e+02      # msR(Q)
+    49     5.68648504e+02      # mbR(Q)
+Block au Q= 4.52517768e+02  
+  1  1    -7.15689512e+02      # Au(Q)MSSM DRbar
+  2  2    -7.15685460e+02      # Ac(Q)MSSM DRbar
+  3  3    -5.12305073e+02      # At(Q)MSSM DRbar
+Block ad Q= 4.52517768e+02  
+  1  1    -9.15318645e+02      # Ad(Q)MSSM DRbar
+  2  2    -9.15314810e+02      # As(Q)MSSM DRbar
+  3  3    -8.43459531e+02      # Ab(Q)MSSM DRbar
+Block ae Q= 4.52517768e+02  
+  1  1    -4.19539953e+02      # Ae(Q)MSSM DRbar
+  2  2    -4.19528786e+02      # Amu(Q)MSSM DRbar
+  3  3    -4.16234136e+02      # Atau(Q)MSSM DRbar
+Block NMSSMRUN Q= 4.52517768e+02   # NMSSM specific DRbar parameters
+     1     1.04745163e-01      # lambda(Q)
+     2     9.74992580e-02      # kappa(Q)
+     3    -1.81067726e+02      # Alambda(Q)
+     4    -2.85653798e+02      # Akappa(Q)
+     5     1.04745158e+02      # lambda*<S>(Q)
+     6     9.91593726e+01      # xiF(Q)
+     7    -1.43521474e+08      # xiS(Q)
+     8     0.00000000e+00      # mu'(Q)
+     9    -2.81109103e+02      # mS'^2(Q)
+    10     1.51586418e+05      # mS^2(Q)
+Block smumix               # smuon mixing matrix
+  1  1     9.14242478e-03   # F_{11}
+  1  2     9.99958207e-01   # F_{12}
+  2  1     9.99958207e-01   # F_{21}
+  2  2    -9.14242478e-03   # F_{22}
+>>>>>>> 825a76e... Better error trapping after bail-out of main iteration
