@@ -2250,7 +2250,7 @@ M.~Eads, H.~Eberl, J.~Evans,
 M.~Hamer, M.~Hussain,
 J.~Hetherington, M.~Ibe, M.~Iskrzynski, J.~Kersten, S.~Knapen, S.~Kom,
 S.~Krippendorf, S.~Kulkarni, D.~Kunz, K.~Ishikawa, 
-R.~Lu, N.~Mahmoudi,  S.~Martin, P.~Meade,
+R.~Lu, N.~Mahmoudi,  S.~Martin, P.~Meade, P.~Millet,
 D.~Morrissey, L.~Nicoletta, B.~Petersen,
 A.~Pukhov, M.~Ramage,
 R.~Ruiz de Austri, 
